kubernetes/observability/namespace.yaml
# Prometheus Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    istio-injection: enabled
